# CCMagicPocket

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/toklive/: CMakeLists.txt
examples/toklive/entity/: CMakeLists.txt  plugin.json  toklive_entity.cpp  toklive_entity.h
examples/toklive/entity/qml/src/: MainWindow.qml
examples/toklive/entity/qml/src/shaders/: wobble.frag  wobble.frag.qsb
examples/toklive/preload/: CMakeLists.txt  toklive_preload.cpp
examples/toklive/preload/qml/: Countdown.qml  PreloadOverlay.qml  PreloadWindow.qml
src/: CMakeLists.txt
src/controls/: CMakeLists.txt  mp_plugin.cpp  mp_plugin.h  qmldir
src/controls/cmake/: MPBuildPackage.cmake
src/controls/impl/: activityinformation.cpp  activityinformation.h  activityitemmodel.cpp  activityitemmodel.h  activitymanager.cpp  activitymanager.h  activitymoduleinformation.h  activityplanegroup.cpp  activityplanegroup.h  activityplaneitem.cpp  activityplaneitem.h  activitytemplateitem.cpp  activitytemplateitem.h  edgetoedgemodehelper.cpp  frameless.cpp  frameless_win.cpp  frameless_win.h  framelessattached.cpp  framelessattached.h  framelessworker.cpp  framelessworkerevent.cpp  iconimageprovider.cpp  iconimageprovider.h  modularlistmodel.cpp  modularlistmodel.h  mousetransparentitem.cpp  mousetransparentitem.h  mpqmlinstance.cpp  mpqmlinstance.h  planegroupmanager.cpp  planegroupmanager.h
src/controls/modules/Controls/: BlurBackground.qml  CheckedAnimateButton.qml  ClipAreaItem.qml  CustomButton.qml  CustomToolTip.qml  InnerShadow.qml  LineEdit.qml  MPIcon.qml  OuterShadow.qml  SearchEdit.qml  ShadowBase.qml
src/controls/modules/Style/: Style.qml
src/controls/modules/Style/desktop/: DesktopStyle.qml
src/controls/modules/Style/mobile/: CustomButtonStyle.qml  MobileStyle.qml  SearchEditStyle.qml
src/controls/modules/Utils/: functional.js
src/controls/template/: Activity.json.in  configure_activity_json.cmake.in
src/entity/: CMakeLists.txt  mp_entity.cpp  mp_entity.h  plugin.json
src/entity/icons/: icons.qrc
src/entity/icons/MagicPocket-desktop/: index.theme
src/entity/qml/src/: ActivityTemplate.qml  CenterPane.qml  FullscreenPlane.qml  LayoutPlane.qml  MainDesktopPlane.qml  MainPane.qml  MainWindow.qml  NavigationBarGroup.qml  WindowPane.qml
src/entity/qml/src/activity/: ActivityContainer.qml  ActivityLayoutDelegate.qml  ActivityLayoutView.qml  ActivityTemplate.qml  CloseTransition.qml  LayoutTransition.qml  MotionBehavior.qml  ShowHideTransition.qml
src/entity/qml/src/bottom/: ActivityDocker.qml  ActivityDockerItem.qml  ActivityDockerModel.qml  ActivityDockerView.qml  ActivityItem.qml  ActivityView.qml
src/entity/qml/src/controls/: PopupPane.qml  PopupSearchEdit.qml  RoundAnimateButton.qml
src/entity/qml/src/effects/: BurnOutEffect.qml  GlassBreak.qml  InvertColorEffect.qml  MagicInEffect.qml
src/entity/qml/src/left/: LeftNavigationBar.qml  NavigationPopup.qml  SlidePopupButton.qml  WindowButtonPane.qml
src/entity/qml/src/shadereffects/: burn.frag  burn.frag.qsb  genie.vert.qsb  glassbreak.frag  glassbreak.frag.qsb  invertcoloreffect.frag  invertcoloreffect.frag.qsb
src/entity/qml/src/title/: StatusBlock.qml  StatusTitleBar.qml  WindowButtonPane.qml
src/main/: CMakeLists.txt  main.cpp  qtquickcontrols2.conf
src/preload/: CMakeLists.txt  mp_preload.cpp  mp_preload.h
src/preload/qml/: PreloadOverlay.qml  PreloadWindow.qml
